--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -1,11 +1,16 @@
 .contacts {
   display: flex;
   flex-direction: column;
+
+  height: calc(100% - 120px);
+
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .contact {
   display: flex;
-  padding: 10px;
+  padding: 10px 20px;
 
   border-radius: 12px;
 
@@ -25,6 +30,8 @@
 .contact__name {
   margin-top: 0;
   margin-bottom: 0;
+
+  color: white;
 }
 
 .pages {
