--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -14,6 +14,7 @@
 @import 'common/Spinner/Spinner';
 @import 'common/Modal/Modal';
 @import 'common/Scrollbar/Scrollbar';
+@import 'common/Input/Input';
 
 *,
 *::before,
