--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -4,6 +4,13 @@
   list-style: none;
 }
 
+@mixin reset-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+}
+
 @mixin flex-center {
   display: flex;
   justify-content: center;
